force-app/main/default/objects/Activity_Item__c/Activity_Item__c.object-meta.xml
<CustomObject>
    <description>Junction between Case and Vehicle</description>
    <label>Activity Item</label>
    <nameField>
        <label>Activity Item  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>