force-app/main/default/objects/Activity_Item__c/fields/Account_number_Navison__c.field-meta.xml
<CustomField>
    <fullName>Account_number_Navison__c</fullName>
    <formula>Vehicle__r.Dealer__r.Navision_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account number (Navison)</label>
    <type>Text</type>
</CustomField>