force-app/main/default/objects/Activity_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activity Items</relationshipLabel>
    <relationshipName>Activity_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>