force-app/main/default/objects/Activity_Item__c/fields/Dealer_email__c.field-meta.xml
<CustomField>
    <fullName>Dealer_email__c</fullName>
    <formula>Vehicle__r.Dealer__r.accountEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer email</label>
    <type>Text</type>
</CustomField>