force-app/main/default/objects/Activity_Item__c/fields/Delivery_address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_address__c</fullName>
    <label>Delivery address</label>
    <type>TextArea</type>
</CustomField>