force-app/main/default/objects/Activity_Item__c/fields/Delivery_address_buyer__c.field-meta.xml
<CustomField>
    <fullName>Delivery_address_buyer__c</fullName>
    <formula>Vehicle__r.Buyer_delivery_address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery address(buyer)</label>
    <type>Text</type>
</CustomField>