force-app/main/default/objects/Activity_Item__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>Vehicle__r.Holding_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>