force-app/main/default/objects/Activity_Item__c/fields/registration_plate__c.field-meta.xml
<CustomField>
    <fullName>registration_plate__c</fullName>
    <formula>Vehicle__r.License_plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle registration plate</label>
    <type>Text</type>
</CustomField>