force-app/main/default/objects/Activity_Item__c/fields/Return_Station_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Station_Account_Number__c</fullName>
    <formula>&quot;210700-&quot; +  BLANKVALUE(Vehicle__r.Return_Station_Account__r.Station_Account_Num__c, Vehicle__r.Station__r.Station_Account_Num__c)</formula>
    <label>Return Station Account Number</label>
    <type>Text</type>
</CustomField>