force-app/main/default/objects/Activity_Item__c/fields/Station_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Station_Account_Number__c</fullName>
    <formula>Vehicle__r.Station__r.Station_Account_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Station Account Number</label>
    <type>Text</type>
</CustomField>