force-app/main/default/objects/Activity_Item__c/fields/Station_Address__c.field-meta.xml
<CustomField>
    <fullName>Station_Address__c</fullName>
    <formula>Vehicle__r.Station__r.Billing_Address_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Station Address</label>
    <type>Text</type>
</CustomField>