force-app/main/default/objects/Activity_Item__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Activity Items</relationshipLabel>
    <relationshipName>Activity_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>