force-app/main/default/objects/Activity_Item__c/fields/Vehicle_Batch__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Batch__c</fullName>
    <formula>Vehicle__r.Vehicle_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Batch #</label>
    <type>Text</type>
</CustomField>