force-app/main/default/objects/Activity_Item__c/fields/Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand__c</fullName>
    <formula>TEXT(Vehicle__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Brand</label>
    <type>Text</type>
</CustomField>