force-app/main/default/objects/Activity_Item__c/fields/Vehicle_date_for_shipment_of_COC_doc__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_date_for_shipment_of_COC_doc__c</fullName>
    <formula>Vehicle__r.Date_for_shipment_of_COC_document__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle date for shipment of COC doc</label>
    <type>Date</type>
</CustomField>