force-app/main/default/objects/Activity_Item__c/fields/Vehicle_dealer__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_dealer__c</fullName>
    <formula>Vehicle__r.Dealer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle dealer</label>
    <type>Text</type>
</CustomField>