force-app/main/default/objects/Activity_Item__c/fields/Vehicle_description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_description__c</fullName>
    <formula>Vehicle__r.Car_description_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle description</label>
    <type>Text</type>
</CustomField>