force-app/main/default/objects/Activity_Item__c/fields/Vehicle_final_tax_after_deduction__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_final_tax_after_deduction__c</fullName>
    <formula>Vehicle__r.Final_tax_after_deduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle final tax after deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>