force-app/main/default/objects/Activity_Item__c/fields/Vehicle_keys_and_documents_tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_keys_and_documents_tracking_ID__c</fullName>
    <formula>Vehicle__r.Keys_and_documents_tracking_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle keys and documents tracking ID</label>
    <type>Text</type>
</CustomField>