force-app/main/default/objects/Activity_Item__c/fields/Vehicle_licence_plate__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_licence_plate__c</fullName>
    <formula>Vehicle__r.License_plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle licence plate</label>
    <type>Text</type>
</CustomField>