force-app/main/default/objects/Activity_Item__c/fields/Vehicle_max_KM__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_max_KM__c</fullName>
    <formula>Vehicle__r.Max_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle max KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>