force-app/main/default/objects/Activity_Item__c/fields/Vehicle_purchase_price_excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_purchase_price_excl_VAT__c</fullName>
    <formula>Vehicle__r.Sixt_purchase_price_excl_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle purchase price excl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>