force-app/main/default/objects/Activity_Item__c/fields/Vehicle_registration_number_BMW__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_registration_number_BMW__c</fullName>
    <formula>Vehicle__r.Registration_Number_BMW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle registration number (BMW)</label>
    <type>Text</type>
</CustomField>