force-app/main/default/objects/Activity_Item__c/fields/Vehicle_Required_by_date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Required_by_date__c</fullName>
    <formula>Vehicle__r.Required_by_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Required by date</label>
    <type>Date</type>
</CustomField>