force-app/main/default/objects/Activity_Item__c/fields/Vehicle_tax_value_incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_tax_value_incl_VAT__c</fullName>
    <formula>Vehicle__r.Tax_value_incl_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle tax value incl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>