force-app/main/default/objects/Activity_Item__c/fields/Vehicle_Vin_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Vin_Number__c</fullName>
    <formula>Vehicle__r.vinNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Vin Number</label>
    <type>Text</type>
</CustomField>